# usbToplay

usb2play/airplay/src/main/: AndroidManifest.xml
usb2play/airplay/src/main/java/com/vsoon/airplay/: Activity_TextureView.java  AirPlayHelper.java  AirPlayServer.java  AirPlayView.java  MainActivity.java  NetworkUtils.java  SurfaceViewAcitity.java  TestService.java  VideoTextureView.java
usb2play/airplay/src/main/java/com/vsoon/encoder/: IAudioEncoder.java  IVideoEncoder.java
usb2play/airplay/src/main/java/com/vsoon/ui/: VsoonPlay.java
usb2play/airplay/src/main/jni/display/: CMakeLists.txt  VsDisplay.cpp  VsDisplay.h  com_vsoon_ui_VsoonPlay.cpp  localdefines.h  test.cpp
usb2play/airplay/src/main/jni/display/include/openssl/: rc5.h
usb2play/airplay/src/main/jni/display/lib/: CMakeLists.txt  dnssd.c  dnssd.h  raop.c  raop_handlers.h  raop_rtp_mirror.c
usb2play/airplay/src/main/jni/display/lib/curve25519/: CMakeLists.txt
usb2play/airplay/src/main/jni/display/lib/ed25519/: CMakeLists.txt
usb2play/airplay/src/main/jni/display/lib/playfair/: CMakeLists.txt
usb2play/airplay/src/main/jni/display/renderers/: audio_renderer_rpi.c  video_renderer_rpi.c
usb2play/airplay/src/main/jni/display/renderers/h264-bitstream/: CMakeLists.txt
usb2play/airplay/src/main/res/layout/: activity__texture_view.xml  activity_surface_view_acitity.xml
usb2play/airplay/src/main/res/navigation/: nav_graph.xml
usb2play/airplay/src/main/res/values/: strings.xml
